--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,13 @@
 {
   "manifest_version": 3,
-  "name": "Gotify推送工具",
-  "version": "1.0",
-  "description": "用于向Gotify服务器发送推送消息的Chrome插件",
+  "name": "__MSG_extName__",
+  "version": "1.1",
+  "description": "__MSG_extDesc__",
+  "default_locale": "en",
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "icons/icon16.svg",
-      "48": "icons/icon48.svg",
-      "128": "icons/icon128.svg"
+      "128": "icons/icon128.png"
     }
   },
   "options_page": "options.html",
@@ -23,8 +22,6 @@
     "http://*:*/*"
   ],
   "icons": {
-    "16": "icons/icon16.svg",
-    "48": "icons/icon48.svg",
-    "128": "icons/icon128.svg"
+    "128": "icons/icon128.png"
   }
 }
