--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "__MSG_extName__",
-  "version": "1.1",
+  "version": "1.2",
   "description": "__MSG_extDesc__",
   "default_locale": "en",
   "action": {
@@ -11,9 +11,13 @@
     }
   },
   "options_page": "options.html",
+  "background": {
+    "service_worker": "background.js"
+  },
   "permissions": [
     "storage",
-    "activeTab"
+    "contextMenus",
+    "notifications"
   ],
   "host_permissions": [
     "https://*/*",
