--- a/manifest.json
+++ b/manifest.json
@@ -5,14 +5,14 @@
   "description": "__MSG_extDesc__",
   "default_locale": "en",
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "html/popup.html",
     "default_icon": {
       "128": "icons/icon128.png"
     }
   },
-  "options_page": "options.html",
+  "options_page": "html/options.html",
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "js/background.js"
   },
   "permissions": [
     "storage",
