--- a/package.json
+++ b/package.json
@@ -8,16 +8,25 @@
     "node": ">=16"
   },
   "scripts": {
-    "lint": "eslint . --ext .js --max-warnings=0 || true",
+    "lint": "eslint . --ext .js --max-warnings=0",
     "lint:fix": "eslint . --ext .js --fix",
     "format": "prettier --write \"**/*.{js,json,css,html,md}\"",
+    "format:check": "prettier --check \"**/*.{js,json,css,html,md}\"",
     "build": "node ./scripts/build.js",
-    "build:dev": "node ./scripts/build.js --dev"
+    "build:dev": "node ./scripts/build.js --dev",
+    "clean": "rimraf dist",
+    "prebuild": "npm run lint && npm run format:check",
+    "postbuild": "npm run clean && echo 'Build artifacts cleaned'",
+    "dev": "npm run build:dev && echo 'Development build complete'",
+    "prod": "npm run prebuild && npm run build && echo 'Production build complete'",
+    "validate": "node -e \"console.log('Validating extension...'); require('./scripts/build.js')\"",
+    "test": "echo 'No tests specified' && exit 0"
   },
   "devDependencies": {
     "esbuild": "^0.18.0",
     "eslint": "^8.0.0",
     "eslint-plugin-import": "^2.0.0",
-    "prettier": "^2.0.0"
+    "prettier": "^2.0.0",
+    "rimraf": "^5.0.0"
   }
 }
