Fix manifest.json background script path and build process

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
   },
   "options_page": "html/options.html",
   "background": {
-    "service_worker": "background.js",
+    "service_worker": "js/background.js",
     "type": "module"
   },
   "permissions": ["storage", "contextMenus", "notifications"],
